--- a/src/App.scss
+++ b/src/App.scss
@@ -3,3 +3,9 @@
   padding: 0px;
   box-sizing: border-box;
 }
+
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,300,400,700);
+
+body {
+  font-family: "Open Sans", sans-serif;
+}
