Main page icons update

--- a/src/styles/ChatScreen.scss
+++ b/src/styles/ChatScreen.scss
@@ -19,7 +19,7 @@
 
         .chatScreen-textUser {
             margin-left: auto;
-            background-color: #28a832;
+            background-color: #109e92;
             padding: 15px;
             border-radius: 20px;
             color: white;
