--- a/src/styles/SwipeButtons.scss
+++ b/src/styles/SwipeButtons.scss
@@ -18,15 +18,7 @@
         color: #ec5e6f !important;
     }
 
-    .swipeButtons-star {
-        color: #62b4f9 !important;
-    }
-
     .swipeButtons-right {
-        color: #76e2b3 !important;
-    }
-
-    .swipeButtons-lightning {
-        color: #915dd1 !important;
+        color: #109e92 !important;
     }
 }
