--- a/src/styles/Chat.scss
+++ b/src/styles/Chat.scss
@@ -1,29 +1,31 @@
-.chat {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    height: 70px;
-    border-bottom: 1px solid #fafafa;
-
-    .chat-details {
-        flex: 1;
+.chat-container{
+    .chat {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 20px;
+        height: 70px;
+        border-bottom: 1px solid #fafafa;
+    
+        .chat-details {
+            flex: 1;
+        }
+    
+        .chat-details > p {
+            color: gray;
+        }
+    
+        .chat-timestamp {
+            color: lightgray;
+        }
+    
+        .chat-image {
+            margin-right: 20px;
+        }
     }
-
-    .chat-details > p {
-        color: gray;
+    
+    a {
+        text-decoration: none;
+        color: inherit;
     }
-
-    .chat-timestamp {
-        color: lightgray;
-    }
-
-    .chat-image {
-        margin-right: 20px;
-    }
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
 }
