--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -10,4 +10,9 @@ $maincolor: green;
         height: 80px;
         object-fit: contain;
     }
+
+    .profile-icon{
+        color: rgba(0, 0, 0, 0.54) !important;
+    }
+
 }
