User profile render statement

--- a/src/styles/Chat.scss
+++ b/src/styles/Chat.scss
@@ -29,3 +29,11 @@
         color: inherit;
     }
 }
+
+.chat-icon{
+    color: rgba(0, 0, 0, 0.54) !important;
+}
+
+.active {
+    color: #109e92 !important;
+}
