--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -15,4 +15,8 @@ $maincolor: green;
         color: rgba(0, 0, 0, 0.54) !important;
     }
 
+    .active {
+        color: #109e92 !important;
+    }
+
 }
