--- a/src/styles/UserProfile.scss
+++ b/src/styles/UserProfile.scss
@@ -59,3 +59,43 @@
     }
   }
 }
+
+.adds-section {
+  width: 100%;
+  display: flex;
+  margin-bottom: 50px;
+  
+  .job-section {
+    width: 50%;
+    height: 100%;
+    margin: 0px 20px 0px 30px;
+
+    .job-card {
+      border: 2px solid lightgray;
+      margin: 20px 60px 20px 60px;
+      border-radius: 15px;
+      padding: 15px;
+    }
+  }
+
+  .search,
+  .offer {
+    color: #252525;
+    height: max-content;
+    border-radius: 15px;
+    box-shadow: 0px 0px 15px 5px #9b9b9b31;;
+    margin-bottom: 30px;
+  }
+
+  .job-section-header {
+    text-align: center;
+    font-size: 22px;
+    text-transform: uppercase;
+    margin-top: 15px;
+    margin-bottom: 20px;
+    margin-left: 60px;
+    margin-right: 60px;
+    padding-bottom: 7px;
+    border-bottom: 1px solid lightgray;
+  }
+}
