--- a/src/styles/Login.scss
+++ b/src/styles/Login.scss
@@ -1,4 +1,5 @@
 .login {
+    margin-top: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,9 +12,6 @@
         }
 
         .login-form-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
             .login-form {
                 text-align: center;
                 input {
@@ -38,26 +36,12 @@
             display: flex;
             justify-content: center;
             align-items: center;
-
-            .login-button {
-                background-color: white; 
-                color: black; 
-                border: 2px solid blue;
-                border-radius: 15px;
-                padding: 8px 16px;
-                text-align: center;
-                text-decoration: none;
-                display: inline-block;
-                font-size: 16px;
-                margin: 4px 2px;
-                transition-duration: 0.4s;
-                cursor: pointer;  
-            }
-
-            .login-button:hover {
-                background-color: blue;
-                color: white;
-              }
+        }
+        button {
+            background-color: #5c5c5c;
+        }
+        button:hover {
+            background-color: #109e92;
         }
 
         .login-p {
@@ -66,9 +50,14 @@
             font-size: 22px;
 
             .login-span {
-                color: blue;
+                color: #109e92;
+                font-weight: 700;
                 cursor: pointer;
             }
         }
     }
+}
+
+.MuiFormLabel-root .MuiFocused {
+    color: #109e92 !important;
 }
