--- a/src/styles/UserProfile.scss
+++ b/src/styles/UserProfile.scss
@@ -82,19 +82,19 @@
         margin: 20px 60px 20px 60px;
         border-radius: 15px;
         padding: 15px;
-  
+
         .job-field {
           display: flex;
           justify-content: flex-start;
           align-items: center;
           position: relative;
           font-weight: 700;
-  
+
           .job-field-description {
             margin-right: 20px;
             float: left;
           }
-  
+
           .job-field-value {
             position: absolute;
             right: 0;
@@ -130,7 +130,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  
+
   .no-ad-section {
     text-align: center;
 
@@ -192,7 +192,8 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      min-width: 49%;
+      max-width: 50%;
+      min-width: 40%;
 
       .fieldset-gender {
         width: max-content !important;
