--- a/src/styles/WorkCards.scss
+++ b/src/styles/WorkCards.scss
@@ -1,29 +1,50 @@
 .workCard-container {
-    display: flex;
-    justify-content: center;
-    margin-top: 5vh;
+  display: flex;
+  justify-content: center;
+  margin-top: 5vh;
 
-    
-    .swipe {
-        position: absolute;    
+  .swipe {
+    position: absolute;
+  }
+
+  .card {
+    position: relative;
+    width: 600px;
+    padding: 20px;
+    max-width: 600px;
+    height: 600px;
+    border-radius: 20px;
+    background-size: cover;
+    background-position: center;
+    box-shadow: 0px 18px 53px 0px rgba(0, 0, 0, 0.3);
+
+    h3 {
+      position: absolute;
+      bottom: 10px;
+      color: white;
     }
-    
-    .card {
-        position: relative;
-        width: 600px;
-        padding: 20px;
-        max-width: 600px;
-        height: 600px;
-        border-radius: 20px;
-        background-size: cover;
-        background-position: center;
-        box-shadow: 0px 18px 53px 0px rgba(0,0,0,0.3);
+  }
+}
 
-        h3 {
-            position: absolute;
-            bottom: 10px;
-            color: white;
-        }
-    }
+.action_sign {
+  margin: 0;
+  width: 15%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -100%);
+  animation: opacityOnAndOff 1.2s;
+  animation-iteration-count: 1;
+}
 
+@keyframes opacityOnAndOff {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
