--- a/src/styles/WorkCards.scss
+++ b/src/styles/WorkCards.scss
@@ -35,6 +35,7 @@
   transform: translate(-50%, -100%);
   animation: opacityOnAndOff 1.2s;
   animation-iteration-count: 1;
+  pointer-events: none;
 }
 
 @keyframes opacityOnAndOff {
