--- a/src/styles/UserProfile.scss
+++ b/src/styles/UserProfile.scss
@@ -15,8 +15,8 @@
     padding: 8% 8% 0 8%;
     flex-wrap: wrap;
     .img_placeholder {
-      width: 100px;
-      height: 115px;
+      height: 120px;
+      width: auto;
       cursor: pointer;
       margin-top: 1rem;
     }
