No ads text print main-page

--- a/src/styles/WorkCards.scss
+++ b/src/styles/WorkCards.scss
@@ -154,6 +154,14 @@
     background-color: #109e92;
 }
 
+.noAds-message {
+  margin-top: 80px;
+  font-size: 22px;
+  text-align: center;
+  font-weight: bold;
+  max-width: 250px;
+}
+
 @keyframes opacityOnAndOff {
   0% {
     opacity: 0;
