--- a/src/styles/ChatScreen.scss
+++ b/src/styles/ChatScreen.scss
@@ -53,7 +53,7 @@
             border: 3px solid #109e92;
             margin-bottom: 10px;
             display: flex;
-            position: fixed;
+            position: absolute;
             bottom: 0;
             width: 50%;
     
