Card buttons functions

--- a/src/styles/UserProfile.scss
+++ b/src/styles/UserProfile.scss
@@ -19,6 +19,7 @@
       width: auto;
       cursor: pointer;
       margin-top: 1rem;
+      border-radius: 60px;
     }
     .user_info_column {
       display: flex;
