--- a/src/styles/Chat.scss
+++ b/src/styles/Chat.scss
@@ -9,6 +9,10 @@
     
         .chat-details {
             flex: 1;
+            
+            h2 {
+                height: 40px;
+            }
         }
     
         .chat-details > p {
@@ -21,6 +25,8 @@
     
         .chat-image {
             margin-right: 20px;
+            height: 40px;
+            width: 40px;
         }
     }
     
