--- a/src/styles/WorkCards.scss
+++ b/src/styles/WorkCards.scss
@@ -107,10 +107,11 @@
       text-align: left;
       padding-left: 40px;
       padding-right: 40px;
+      margin-top: 15px;
 
       .ad-info-name {
         font-weight: 700;
-        margin-bottom: 10px;
+        margin-bottom: 7px;
       }
     }
 
