--- a/src/styles/WorkCards.scss
+++ b/src/styles/WorkCards.scss
@@ -31,6 +31,11 @@
       height: 400px;
     }
 
+    @media (max-height: 700px) {
+      width: 300px;
+      height: 300px;
+    }
+
     .card-info {
       position: absolute;
       bottom: 10px;
@@ -82,6 +87,10 @@
   justify-content: space-between;
   align-items: flex-start;
 
+  @media (max-width: 1200px) {
+    flex-wrap: wrap;
+  }
+
   .ad {
     width: 100%;
 
@@ -90,6 +99,10 @@
       margin-bottom: 20px;
       font-size: 20px;
       text-transform: uppercase;
+
+      @media (max-width: 620px) {
+        font-size: 16px;
+      }
     }
 
     .ad-user-logo {
@@ -101,6 +114,10 @@
       margin-top: 20px;
       height: 200px;
       width: auto;
+
+      @media (max-width: 620px) {
+        height: 100px;
+      }
     }
 
     .ad-info-field-big {
@@ -108,6 +125,10 @@
       padding-left: 40px;
       padding-right: 40px;
       margin-top: 15px;
+
+      @media (max-width: 620px) {
+        font-size: 12px;
+      }
 
       .ad-info-name {
         font-weight: 700;
@@ -121,6 +142,10 @@
       align-items: center;
       padding-left: 40px;
       padding-right: 40px;
+
+      @media (max-width: 620px) {
+        font-size: 12px;
+      }
 
       .ad-info-name {
         font-weight: 700;
